[package]
name = "voyagesp"
version = "0.1.0"
authors = ["akosnad"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "voyagesp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
simulation = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", features = ["experimental"] }
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-hal = "0.42.5"
anyhow = { version = "1.0.86", features = ["backtrace"] }
ha_types = { path = "ha_types" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
esp-ota = "0.2.0"
seq-macro = "0.3.5"
axp192 = "0.1.1"
ublox = "0.4.5"

[build-dependencies]
anyhow = "1.0.86"
embuild = "0.31.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
uneval = "0.2.4"
ha_types = { path = "ha_types" }

[package.metadata.espflash]
partition_table = "partitions.csv"
